--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="robots" content="noindex, nofollow" />
 
 
   <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" media="all" />
