dropdown category in header

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/libary.css" media="all" />
   <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" media="all" />
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css" media="all" />
+  <!-- fontawesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 
 </head>
 <body>
