update favicon va qua tang kem ben trong san pham

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <title>Rẻ quá</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="assets/imgs/cropped-ico-1-32x32.png" sizes="32x32" />
+  <link rel="icon" href="assets/imgs/cropped-ico-1-192x192.png" sizes="192x192" />
+  <link rel="apple-touch-icon" href="assets/imgs/cropped-ico-1-180x180.png" />
   <meta name="robots" content="noindex, nofollow" />
   <meta name="description" content="Mua Hoàn Tiền là nền tảng giúp các cộng tác viên kiếm được nhiều tiền hơn nhờ chỉ với việc chia sẻ link sản phẩm" />
 
